<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CatalogActivity">

    <item
        android:id="@+id/action_insert_dummy_product"
        android:title="@string/action_insert_dummy_data"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_all"
        android:title="@string/action_delete_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_product"
        android:title="@string/add_product"
        app:showAsAction="never" />

    <item
        android:id="@+id/home"
        android:title="@string/home"
        app:showAsAction="never" />
</menu>